style/style.scss
$green: #38A317;
$black: #161716;
$white: #EEEEEE;

.green{
	color: $green;
}

body{
	max-width: 1366px;
	min-width: 480px;
	margin-left: auto;
	margin-right: auto;
	font-family: 'Open Sans', sans-serif;
	background: $black;
}

h1, h2, h3, h4, h5, h6{
	font-family: 'Open Sans', sans-serif;
}

.header-logo-container{
	padding: 1rem;
	text-align: center;

	.header-logo{
		width: 20%;
	}
}

nav{
	text-align: center;
	padding: 2rem;

	a{
		margin: 0 1rem;
		padding: 1rem 0;
		font-size: 1rem;
		color: $white;
		border-bottom: 3px solid $black;
		transition: 0.3s ease;
	}
	a:hover{
		color: $white;
		border-bottom: 3px solid $white;
	}
}

.header-image{
	margin: 0 5rem;
}

.about-us, .we-recommend{
	padding: 4rem;
	padding-top: 10rem;
	color: $white;
}

.we-recommend{
	a{
		color: $green;
		transition: 0.3s;
	}
	a:hover{
		color: $white;
	}
}

.seperator{
	height: 2px;
	width: 80%;
	color: $white;
	border-radius: 5px;
}


.footer{
	padding: 2rem 8rem;

	.footer-logo{
	    font-family: 'Open Sans Condensed', sans-serif;
		color: white;
	}
}

@media screen and (max-width: 1280px){
	.about-us, .we-recommend{
		padding: 2rem;
		padding-top: 8rem;
	}

	.seperator{
		width: 90%;
	}

}

@media screen and (max-width: 980px){
	.header-image{
		height: 40%;
	}

	.about-us, .we-recommend{
		padding: 4rem 5rem;
		padding-top: 5rem;
		padding-bottom: 0rem;
	}

	.seperator{
		width: 85%;
	}

	.footer{
		padding: 2rem 8rem;
	}
}

@media screen and (max-width: 768px){
	.seperator{
		width: 80%;
	}

	.footer{
		padding: 2rem 8rem;
	}
}

@media screen and (max-width: 480px){
	.seperator{
		width: 70%;
	}

	.footer{
		padding: 0 8rem;
		h3{
			font-size: 1.5rem;
		}
	}

	.header-logo-container{
		.header-logo{
			width: 40%;
		}
	}
}

